fix: Améliorer les messages de vérification des conteneurs et supprimer la tâche d'attente des conteneurs

--- a/docker/stack/Taskfile.yml
+++ b/docker/stack/Taskfile.yml
@@ -271,7 +271,7 @@ tasks:
       check_count=0
 
       if [ -n "{{.CONTAINERS}}" ]; then
-        echo "🔍 Vérification de l'état des conteneurs : {{.CONTAINERS}}"
+        echo "🔍 Vérification de l'état des conteneurs demandés : {{.CONTAINERS}}"
         containers_list="{{.CONTAINERS}}"
         containers_clean=$(echo "$containers_list" | tr ',' ' ')
       fi
@@ -315,11 +315,12 @@ tasks:
         ready_services=""
         pending_services=""
 
-        # Vérification des conteneurs
+        # Vérification des conteneurs demandés uniquement
         if [ -n "{{.CONTAINERS}}" ]; then
           for container in $containers_clean; do
             container=$(echo "$container" | xargs)
-            if docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{.Names}}" | grep -q "{{.STACK_NAME}}_${container}"; then
+            # Vérifie uniquement le conteneur explicitement demandé
+            if docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{.Names}}" | grep -wq "{{.STACK_NAME}}_${container}"; then
               ready_containers="$ready_containers $container"
             else
               missing_containers="$missing_containers $container"
@@ -383,345 +384,6 @@ tasks:
           break
         fi
 
-        echo ""
-        sleep {{.CHECK_INTERVAL}}
-      done
-
-  wait:containers:ready:
-    desc: "Attend que les conteneurs spécifiés soient prêts"
-    silent: true
-    preconditions:
-    - sh: command -v docker
-      msg: "Docker n'est pas installé ou accessible"
-    summary: |
-      Attend que tous les conteneurs d'une liste soient actifs et en bonne santé.
-      Effectue des vérifications périodiques jusqu'au timeout.
-
-      Variables:
-      - CONTAINERS: Liste des conteneurs séparés par des virgules (ex: "traefik,portainer")
-      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
-      - TIMEOUT: Timeout en secondes (défaut: 300)
-      - CHECK_INTERVAL: Intervalle entre les vérifications en secondes (défaut: 10)
-
-      Exemple:
-      task docker:stack:wait:containers:ready CONTAINERS="traefik,portainer" TIMEOUT=600
-    vars:
-      TIMEOUT: '{{.TIMEOUT | default "300"}}'
-      CHECK_INTERVAL: '{{.CHECK_INTERVAL | default "10"}}'
-      STACK_NAME: '{{.STACK_NAME | default "taskfiles-stack"}}'
-      CONTAINERS: '{{.CONTAINERS | default ""}}'
-    cmds:
-    - |
-      if [ -z "{{.CONTAINERS}}" ]; then
-        echo "❌ CONTAINERS est requis (ex: 'traefik,portainer')"
-        exit 1
-      fi
-
-      echo "⏳ Attente que les conteneurs soient prêts : {{.CONTAINERS}}"
-      echo "🕐 Timeout: {{.TIMEOUT}}s, Intervalle de vérification: {{.CHECK_INTERVAL}}s"
-
-      start_time=$(date +%s)
-      timeout_time=$((start_time + {{.TIMEOUT}}))
-
-      # Convertir la liste en format compatible POSIX
-      containers_list="{{.CONTAINERS}}"
-      containers_clean=$(echo "$containers_list" | tr ',' ' ')
-
-      while true; do
-        current_time=$(date +%s)
-        
-        if [ $current_time -gt $timeout_time ]; then
-          echo "❌ Timeout atteint ({{.TIMEOUT}}s). Les conteneurs ne sont pas tous prêts."
-          exit 1
-        fi
-        
-        all_ready=true
-        
-        for container in $containers_clean; do
-          container=$(echo "$container" | xargs)  # Trim whitespace
-          
-          if ! docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{.Names}}" | grep -q "{{.STACK_NAME}}_${container}"; then
-            all_ready=false
-            break
-          fi
-        done
-        
-        if [ "$all_ready" = true ]; then
-          echo "✅ Tous les conteneurs sont prêts!"
-          break
-        fi
-        
-        elapsed=$((current_time - start_time))
-        echo "⏳ Attente... (${elapsed}s/{{.TIMEOUT}}s)"
-        sleep {{.CHECK_INTERVAL}}
-      done
-
-  check:services:health:
-    desc: "Vérifie la santé des services actifs d'une stack (ignore les services Complete)"
-    silent: true
-    preconditions:
-    - sh: command -v docker
-      msg: "Docker n'est pas installé ou accessible"
-    vars:
-      STACK_NAME: '{{.STACK_NAME | default "taskfiles-stack"}}'
-      TIMEOUT: '{{.TIMEOUT | default "300"}}'
-      CHECK_INTERVAL: '{{.CHECK_INTERVAL | default "10"}}'
-      EXCLUDE_STATES: '{{.EXCLUDE_STATES | default "Complete,Failed,Rejected"}}'
-      SPECIFIC_SERVICES: '{{.SPECIFIC_SERVICES | default ""}}'
-    summary: |
-      Vérifie que tous les services actifs d'une stack sont en bonne santé.
-      Ignore automatiquement les services en état Complete, Failed, ou Rejected.
-      Si SPECIFIC_SERVICES est défini, vérifie uniquement ces services.
-
-      Variables:
-      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
-      - TIMEOUT: Timeout en secondes (défaut: 300)
-      - CHECK_INTERVAL: Intervalle entre les vérifications en secondes (défaut: 10)
-      - EXCLUDE_STATES: États à ignorer séparés par des virgules (défaut: "Complete,Failed,Rejected")
-      - SPECIFIC_SERVICES: Services spécifiques à vérifier, séparés par des virgules (défaut: tous)
-
-      Exemples:
-      task docker:stack:check:services:health STACK_NAME=lampy
-      task docker:stack:check:services:health STACK_NAME=lampy SPECIFIC_SERVICES="mercure,redis,traefik"
-      task docker:stack:check:services:health STACK_NAME=production TIMEOUT=600
-      task docker:stack:check:services:health STACK_NAME=dev EXCLUDE_STATES="Complete,Shutdown"
-    cmds:
-    - |
-      # Vérifier que la stack existe
-      if ! docker stack ls | awk 'NR>1 {print $1}' | grep -q "^{{.STACK_NAME}}$"; then
-        echo "❌ La stack '{{.STACK_NAME}}' n'existe pas"
-        echo "📋 Stacks disponibles :"
-        docker stack ls | awk 'NR>1 {print $1}'
-        exit 1
-      fi
-
-      echo "🔍 Vérification de la santé des services de la stack '{{.STACK_NAME}}'..."
-
-      # Déterminer quels services vérifier
-      if [ -n "{{.SPECIFIC_SERVICES}}" ]; then
-        echo "🎯 Services ciblés : {{.SPECIFIC_SERVICES}}"
-        check_mode="specific"
-        target_services=$(echo "{{.SPECIFIC_SERVICES}}" | tr ',' ' ')
-      else
-        echo "🌐 Mode : Tous les services actifs"
-        check_mode="all"
-      fi
-
-      echo "🕐 Timeout: {{.TIMEOUT}}s, Intervalle de vérification: {{.CHECK_INTERVAL}}s"
-      echo "🚫 États ignorés: {{.EXCLUDE_STATES}}"
-      echo ""
-
-      start_time=$(date +%s)
-      timeout_time=$((start_time + {{.TIMEOUT}}))
-      check_count=0
-
-      # Convertir les états à exclure en format utilisable
-      exclude_states="{{.EXCLUDE_STATES}}"
-      exclude_pattern=$(echo "$exclude_states" | tr ',' '|')
-
-      while true; do
-        current_time=$(date +%s)
-        check_count=$((check_count + 1))
-        
-        # Vérifier le timeout
-        if [ $current_time -gt $timeout_time ]; then
-          echo ""
-          echo "❌ Timeout atteint ({{.TIMEOUT}}s). Tous les services ne sont pas encore en bonne santé."
-          echo ""
-          echo "📋 État final de tous les services :"
-          docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "table {{`{{.Name}}`}}\t{{`{{.Replicas}}`}}\t{{`{{.Image}}`}}"
-          echo ""
-          echo "📋 État détaillé des tâches :"
-          docker stack ps {{.STACK_NAME}} --format "table {{`{{.Name}}`}}\t{{`{{.CurrentState}}`}}\t{{`{{.DesiredState}}`}}\t{{`{{.Error}}`}}"
-          exit 1
-        fi
-        
-        # Compter les services selon leur état
-        running_count=0
-        excluded_count=0
-        pending_count=0
-        error_count=0
-        expected_running=0
-        
-        service_details=""
-        excluded_services=""
-        pending_services=""
-        error_services=""
-
-        if [ "$check_mode" = "specific" ]; then
-          # Mode spécifique : vérifier uniquement les services demandés
-          for service_short_name in $target_services; do
-            service_short_name=$(echo "$service_short_name" | xargs)  # Trim whitespace
-            service_full_name="{{.STACK_NAME}}_${service_short_name}"
-            
-            # Vérifier que le service existe
-            if ! docker service ls --filter "name=$service_full_name" --format "{{`{{.Name}}`}}" | grep -q "^$service_full_name$"; then
-              echo "❌ Service '$service_full_name' non trouvé dans la stack"
-              continue
-            fi
-            
-            # Obtenir l'état des tâches pour ce service
-            task_states=$(docker service ps $service_full_name --format "{{`{{.CurrentState}}`}}" --no-trunc)
-            replicas=$(docker service ls --filter "name=$service_full_name" --format "{{`{{.Replicas}}`}}")
-            
-            # Vérifier si le service a des tâches dans les états à exclure
-            if echo "$task_states" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
-              excluded_count=$((excluded_count + 1))
-              excluded_services="$excluded_services $service_short_name"
-              continue
-            fi
-            
-            # Si on arrive ici, le service doit être compté comme "attendu"
-            expected_running=$((expected_running + 1))
-            
-            # Vérifier si le service est en cours d'exécution (Running)
-            if echo "$task_states" | grep -q "Running" && [ "$replicas" != "0/1" ] && [ "$replicas" != "0/0" ]; then
-              running_count=$((running_count + 1))
-              service_details="$service_details $service_short_name"
-            else
-              # Vérifier s'il y a des erreurs
-              if docker service ps $service_full_name --format "{{`{{.Error}}`}}" | grep -v "^$" >/dev/null 2>&1; then
-                error_count=$((error_count + 1))
-                error_services="$error_services $service_short_name"
-              else
-                pending_count=$((pending_count + 1))
-                pending_services="$pending_services $service_short_name"
-              fi
-            fi
-          done
-        else
-          # Mode tous les services : analyser tous les services de la stack
-          total_services=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}" | wc -l)
-          
-          if [ $total_services -eq 0 ]; then
-            echo "❌ Aucun service trouvé dans la stack '{{.STACK_NAME}}'"
-            exit 1
-          fi
-
-          # Analyser chaque service
-          for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}"); do
-            # Obtenir les informations détaillées du service
-            replicas=$(docker service ls --filter "name=$service_name" --format "{{`{{.Replicas}}`}}")
-            
-            # Obtenir l'état des tâches pour ce service
-            task_states=$(docker service ps $service_name --format "{{`{{.CurrentState}}`}}" --no-trunc)
-            
-            # Analyser l'état du service
-            service_short_name=$(echo "$service_name" | sed "s/^{{.STACK_NAME}}_//")
-            
-            # Vérifier si le service a des tâches dans les états à exclure
-            if echo "$task_states" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
-              excluded_count=$((excluded_count + 1))
-              excluded_services="$excluded_services $service_short_name"
-              continue
-            fi
-            
-            expected_running=$((expected_running + 1))
-            
-            # Vérifier si le service est en cours d'exécution (Running)
-            if echo "$task_states" | grep -q "Running" && [ "$replicas" != "0/1" ] && [ "$replicas" != "0/0" ]; then
-              running_count=$((running_count + 1))
-              service_details="$service_details $service_short_name"
-            else
-              # Vérifier s'il y a des erreurs
-              if docker service ps $service_name --format "{{`{{.Error}}`}}" | grep -v "^$" >/dev/null 2>&1; then
-                error_count=$((error_count + 1))
-                error_services="$error_services $service_short_name"
-              else
-                pending_count=$((pending_count + 1))
-                pending_services="$pending_services $service_short_name"
-              fi
-            fi
-          done
-        fi
-        
-        # Affichage de l'état
-        elapsed=$((current_time - start_time))
-        echo "⏳ Vérification #$check_count (${elapsed}s/{{.TIMEOUT}}s)"
-        
-        if [ "$check_mode" = "specific" ]; then
-          echo "   🎯 Services ciblés: $(echo "{{.SPECIFIC_SERVICES}}" | tr ',' ' ' | wc -w) | Actifs attendus: $expected_running"
-        else
-          total_services_in_stack=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}" | wc -l)
-          echo "   📊 Total: $total_services_in_stack services | Actifs attendus: $expected_running"
-        fi
-        
-        if [ $running_count -gt 0 ]; then
-          echo "   ✅ En cours ($running_count/$expected_running):$service_details"
-        fi
-        
-        if [ $excluded_count -gt 0 ]; then
-          echo "   🚫 Ignorés ($excluded_count):$excluded_services"
-        fi
-        
-        if [ $pending_count -gt 0 ]; then
-          echo "   ⏳ En attente ($pending_count):$pending_services"
-        fi
-        
-        if [ $error_count -gt 0 ]; then
-          echo "   ❌ En erreur ($error_count):$error_services"
-        fi
-        
-        # Vérifier si tous les services attendus sont en cours
-        if [ $running_count -eq $expected_running ] && [ $error_count -eq 0 ]; then
-          echo ""
-          echo "🎉 Succès ! Tous les services ciblés sont en bonne santé !"
-          echo "⏱️  Temps total d'attente : ${elapsed}s"
-          echo ""
-          echo "📋 Résumé final :"
-          echo "   ✅ Services en cours : $running_count/$expected_running"
-          if [ $excluded_count -gt 0 ]; then
-            echo "   🚫 Services ignorés : $excluded_count"
-          fi
-          echo ""
-          echo "📋 Services vérifiés :"
-          
-          if [ "$check_mode" = "specific" ]; then
-            # Afficher uniquement les services spécifiés
-            for service_short_name in $target_services; do
-              service_short_name=$(echo "$service_short_name" | xargs)
-              service_full_name="{{.STACK_NAME}}_${service_short_name}"
-              
-              if docker service ls --filter "name=$service_full_name" --format "{{`{{.Name}}`}}" | grep -q "^$service_full_name$"; then
-                replicas=$(docker service ls --filter "name=$service_full_name" --format "{{`{{.Replicas}}`}}")
-                task_state=$(docker service ps $service_full_name --format "{{`{{.CurrentState}}`}}" --no-trunc | head -n 1)
-                
-                # Ignorer les services exclus dans l'affichage
-                if echo "$task_state" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
-                  echo "   🚫 $service_short_name - $task_state (ignoré)"
-                else
-                  echo "   ✅ $service_short_name - $task_state ($replicas)"
-                fi
-              else
-                echo "   ❓ $service_short_name - Service non trouvé"
-              fi
-            done
-          else
-            # Afficher tous les services de la stack
-            for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}"); do
-              replicas=$(docker service ls --filter "name=$service_name" --format "{{`{{.Replicas}}`}}")
-              task_state=$(docker service ps $service_name --format "{{`{{.CurrentState}}`}}" --no-trunc | head -n 1)
-              service_short_name=$(echo "$service_name" | sed "s/^{{.STACK_NAME}}_//")
-              
-              # Ignorer les services exclus
-              if echo "$task_state" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
-                echo "   🚫 $service_short_name - $task_state (ignoré)"
-              else
-                echo "   ✅ $service_short_name - $task_state ($replicas)"
-              fi
-            done
-          fi
-          break
-        else
-          # Debug: afficher pourquoi on n'a pas atteint le succès
-          if [ $running_count -ne $expected_running ]; then
-            echo "   🔍 Debug: Services en cours ($running_count) ≠ Services attendus ($expected_running)"
-          fi
-          if [ $error_count -ne 0 ]; then
-            echo "   🔍 Debug: Services en erreur ($error_count) > 0"
-          fi
-        fi
-        
         echo ""
         sleep {{.CHECK_INTERVAL}}
       done
