--- a/docker/Taskfile.yml
+++ b/docker/Taskfile.yml
@@ -13,3 +13,29 @@ includes:
 vars:
   CONTAINER_NAME: '{{.CONTAINER_NAME | default ""}}'
   IMAGE_NAME: '{{.IMAGE_NAME | default ""}}'
+
+tasks:
+  create:
+    desc: "Créer et démarrer un conteneur Docker"
+    silent: true
+    vars:
+      CONTAINER_NAME: '{{.CONTAINER_NAME | default "labstag-php"}}'
+      IMAGE_NAME: '{{.IMAGE_NAME | default "koromerzhin/php:8.4.13-apache-symfony"}}'
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    cmds:
+    - docker create --name {{.CONTAINER_NAME}} {{.IMAGE_NAME}}
+
+  getfile:
+    desc: "Récupérer un fichier depuis un conteneur Docker"
+    silent: true
+    vars:
+      CONTAINER_NAME: '{{.CONTAINER_NAME | default "labstag-php"}}'
+      FILE_PATH: '{{.FILE_PATH | default "/var/www/html/.env"}}'
+      DEST_PATH: '{{.DEST_PATH | default "./.env"}}'
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    cmds:
+    - docker cp {{.CONTAINER_NAME}}:{{.FILE_PATH}} {{.DEST_PATH}}
