--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,7 +15,6 @@ includes:
 vars:
   # Variables avec valeurs par défaut depuis .env ou valeurs de fallback
   PROJECT_NAME: '{{.PROJECT_NAME | default "taskfiles-collection"}}'
-  PROJECT_VERSION: '1.0.0'
   ENVIRONMENT: '{{.ENVIRONMENT | default "development"}}'
   TIMESTAMP: '{{now | date "2006-01-02 15:04:05"}}'
 
@@ -32,12 +31,19 @@ tasks:
     - echo "💡 Utilisez 'task <namespace>:<tâche>' pour accéder aux tâches spécialisées"
     - echo "📚 Utilisez 'task help:<namespace>' pour l'aide détaillée d'un namespace"
 
+  lint:all:
+    desc: "Vérifie le code avec tous les outils de linting"
+    silent: true
+    cmds:
+    - npm run lint:markdown
+
   info:
     desc: "Affiche les informations du projet avec les variables d'environnement"
     silent: true
     cmds:
     - |
-      echo "🛠️  {{.PROJECT_NAME}} v{{.PROJECT_VERSION}} - Collection de Taskfiles"
+      export PROJECT_VERSION=$(jq -r .version package.json)
+      echo "🛠️  {{.PROJECT_NAME}} v$PROJECT_VERSION - Collection de Taskfiles"
       echo "📅 {{.TIMESTAMP}}"
       echo "🌍 Environnement: {{.ENVIRONMENT}}"
       echo "📂 Répertoire: $(pwd)"
