--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,6 +37,7 @@ tasks:
     silent: true
     cmds:
     - npm run lint:markdown
+    - find . -type f -name "*.yml" -exec npx yaml-lint {} +
 
   info:
     desc: "Affiche les informations du projet avec les variables d'environnement"
