feat: ajouter un linter pour les fichiers YAML et Markdown

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,6 +12,7 @@ includes:
   download: ./download/Taskfile.yml
   help: ./help/Taskfile.yml
   apache: ./apache/Taskfile.yml
+  lint: ./lint/Taskfile.yml
 
 vars:
   # Variables avec valeurs par défaut depuis .env ou valeurs de fallback
