--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,7 +37,7 @@ tasks:
     desc: "Vérifie le code avec tous les outils de linting"
     silent: true
     cmds:
-    - task: lint:yaml
+    - task: lint:yml
     - task: lint:md
 
   info:
