feat: add action linter to Taskfile and improve YAML/Markdown linting tasks

--- a/lint/Taskfile.yml
+++ b/lint/Taskfile.yml
@@ -1,31 +1,53 @@
 version: '3'
 tasks:
+  action:
+    desc: "Linter tous les fichiers Action (.yml dans .github/workflows)"
+    preconditions:
+    - sh: command -v go
+      msg: "go n'est pas installé. Veuillez l'installer"
+    silent: true
+    cmds:
+    - |
+      set -euo pipefail
+
+      if ! command -v actionlint >/dev/null 2>&1; then
+        echo "actionlint non trouvé, installation..."
+        go install github.com/rhysd/actionlint/cmd/actionlint@latest
+      fi
+
+      find .github/workflows -type f -name '*.yml' ! -path '*/node_modules/*' ! -path '*/vendor/*' -print \
+        | while IFS= read -r file; do
+            echo "Vérification de $file"
+            actionlint  "$file"
+          done
+
+      echo "✅ Tous les fichiers Action ont été vérifiés"
   yml:
     desc: "Linter tous les fichiers YAML (.yml, .yaml)"
     silent: true
     vars:
       IGNORE_DIR: '{{.IGNORE_DIR | default ""}}'
     cmds:
-      - |
-        set -euo pipefail
+    - |
+      set -euo pipefail
 
-        IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
-        DIRS="${IGNORE_DIR//,/ }"
+      IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
+      DIRS="${IGNORE_DIR//,/ }"
 
-        FIND_EXPR=()
-        for d in $DIRS; do
-          [ -z "$d" ] && continue
-          FIND_EXPR+=( "(" -path "./$d" -prune ")" -o )
-        done
+      FIND_EXPR=()
+      for d in $DIRS; do
+        [ -z "$d" ] && continue
+        FIND_EXPR+=( "(" -path "./$d" -prune ")" -o )
+      done
 
-        find . "${FIND_EXPR[@]}" -type f \( -name '*.yml' -o -name '*.yaml' \) \
-          ! -path '*/node_modules/*' ! -path '*/vendor/*' -print \
-          | while IFS= read -r file; do
-              echo "Vérification de $file"
-              npx yaml-lint "$file"
-            done
+      find . "${FIND_EXPR[@]}" -type f \( -name '*.yml' -o -name '*.yaml' \) \
+        ! -path '*/node_modules/*' ! -path '*/vendor/*' -print \
+        | while IFS= read -r file; do
+            echo "Vérification de $file"
+            npx yaml-lint "$file"
+          done
 
-        echo "✅ Tous les fichiers YAML ont été vérifiés"
+      echo "✅ Tous les fichiers YAML ont été vérifiés"
 
   md:
     desc: "Linter tous les fichiers Markdown (.md)"
@@ -33,23 +55,23 @@ tasks:
     vars:
       IGNORE_DIR: '{{.IGNORE_DIR | default ""}}'
     cmds:
-      - |
-        set -euo pipefail
+    - |
+      set -euo pipefail
 
-        IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
-        DIRS="${IGNORE_DIR//,/ }"
+      IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
+      DIRS="${IGNORE_DIR//,/ }"
 
-        FIND_EXPR=()
-        for d in $DIRS; do
-          [ -z "$d" ] && continue
-          FIND_EXPR+=( "(" -path "./$d" -prune ")" -o )
-        done
+      FIND_EXPR=()
+      for d in $DIRS; do
+        [ -z "$d" ] && continue
+        FIND_EXPR+=( "(" -path "./$d" -prune ")" -o )
+      done
 
-        find . "${FIND_EXPR[@]}" -type f -name '*.md' \
-          ! -path '*/node_modules/*' ! -path '*/vendor/*' ! -name 'CHANGELOG.md' -print \
-          | while IFS= read -r file; do
-              echo "Vérification de $file"
-              npx markdownlint "$file"
-            done
+      find . "${FIND_EXPR[@]}" -type f -name '*.md' \
+        ! -path '*/node_modules/*' ! -path '*/vendor/*' ! -name 'CHANGELOG.md' -print \
+        | while IFS= read -r file; do
+            echo "Vérification de $file"
+            npx markdownlint "$file"
+          done
 
-        echo "✅ Tous les fichiers Markdown ont été vérifiés"
+      echo "✅ Tous les fichiers Markdown ont été vérifiés"
