feat: add automatic installation for yaml-lint and markdownlint if not present

--- a/lint/Taskfile.yml
+++ b/lint/Taskfile.yml
@@ -42,6 +42,11 @@ tasks:
     - |
       set -euo pipefail
 
+      if ! command -v yamllint >/dev/null 2>&1; then
+        echo "yaml-lint non trouvé, installation..."
+        npm install -g yaml-lint
+      fi
+
       IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
       DIRS="${IGNORE_DIR//,/ }"
 
@@ -53,7 +58,7 @@ tasks:
 
       find . "${FIND_EXPR[@]}" -type f \( -name '*.yml' -o -name '*.yaml' \) ! -path '*/node_modules/*' ! -path '*/vendor/*' -print | while IFS= read -r file; do
         echo "Vérification de $file"
-        npx yaml-lint "$file"
+        yamllint "$file"
       done
 
       echo "✅ Tous les fichiers YAML ont été vérifiés"
@@ -67,6 +72,11 @@ tasks:
     - |
       set -euo pipefail
 
+      if ! command -v markdownlint >/dev/null 2>&1; then
+        echo "markdownlint-cli non trouvé, installation..."
+        npm install -g markdownlint-cli
+      fi
+
       IGNORE_DIR="{{.IGNORE_DIR | default ""}}"
       DIRS="${IGNORE_DIR//,/ }"
 
@@ -76,9 +86,9 @@ tasks:
         FIND_EXPR+=( "(" -path "./$d" -prune ")" -o )
       done
 
-      find . "${FIND_EXPR[@]}" -type f -name '*.md' ! -path '*/node_modules/*' ! -path '*/vendor/*' ! -name 'CHANGELOG.md' -print | while IFS= read -r file; do
+      find . "${FIND_EXPR[@]}" -type f \( -name '*.md' \) ! -path '*/node_modules/*' ! -path '*/vendor/*' -print | while IFS= read -r file; do
         echo "Vérification de $file"
-        npx markdownlint "$file"
+        markdownlint "$file"
       done
 
       echo "✅ Tous les fichiers Markdown ont été vérifiés"
